fixed navbar collapsing

--- a/core/static/core/navbar_transparent.css
+++ b/core/static/core/navbar_transparent.css
@@ -1,7 +1,9 @@
 .navbar-transparent {
+  background-color: rgba(20, 20, 20, 0.3);
   color: #eee;
-  background: transparent;
+  /*background: transparent;*/
   border: none;
+  z-index: 2000;
 }
 
 .dark {
@@ -43,18 +45,17 @@
   transition-duration: 0.25s;
 }
 
-.navbar-transparent .navbar-toggle.collapsed .icon-bar, .navbar-transparent .navbar-toggle.collapsed:active .icon-bar {
+.navbar-transparent .navbar-toggle.collapsed .icon-bar, .navbar-transparent .navbar-toggle .icon-bar {
   background-color: #eee;
 }
 
 .navbar-simple .navbar-collapse.collapse {
-  display: block;
-  float: right;
   border: none;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
+/*
 .navbar-nav>li, .navbar-nav {
   float: left;
 }
@@ -62,4 +63,4 @@
 .navbar-simple .navbar-header {
   float: left;
 }
-
+*/
